inserted text and images

--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,14 @@ main section {
   justify-content: center;
 }
 
+.actors {
+display: flex;
+}
+
+img {
+width: 120px;
+}
+
 /************
 FOOTER
 ************/
