--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,17 @@ aside {
 /************
 HEADER
 ************/
-/* Your Styles */
+header h1 {
+font-family: 'Staatliches', sans-serif;
+font-size: 80px;
+text-align: center;
+}
+
+header h5 {
+font-family: 'Staatliches', sans-serif;
+font-size: 20px;
+text-align: center;
+}
 
 
 /************
