--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,11 @@
 /*
   DIAGNOSTIC STYLING
 */
+* {
+  color: white;
+}
 body {
-  background: gray;
+  background: black;
 }
 
 * {
@@ -44,14 +47,18 @@ HEADER
 ************/
 header h1 {
 font-family: 'Staatliches', sans-serif;
-font-size: 80px;
+font-size: 120px;
 text-align: center;
+color: white;
+
 }
 
 header h5 {
 font-family: 'Staatliches', sans-serif;
 font-size: 20px;
 text-align: center;
+color: white;
+margin-top: -40px;
 }
 
 
@@ -83,6 +90,9 @@ main section {
 
 .actors {
 display: flex;
+color: white;
+border: solid 1px red;
+margin-top: 50px;
 }
 
 img {
@@ -106,4 +116,21 @@ RWD
     grid-column: 1 / span 5;
   }
   
+}
+
+ul {
+color: white;
+}
+aside {
+margin-left: 25px;
+margin-top: -20px;
+border: solid 1px red;
+height: 350px;
+}
+aside p {
+font-size: 20px;
+font-family: sans-serif;
+}
+.body {
+line-height: 25px;
 }
