--- a/css/styles.css
+++ b/css/styles.css
@@ -91,8 +91,8 @@ main section {
 .actors {
 display: flex;
 color: white;
-border: solid 1px red;
 margin-top: 50px;
+
 }
 
 img {
@@ -122,9 +122,8 @@ ul {
 color: white;
 }
 aside {
-margin-left: 25px;
+margin-left: 40px;
 margin-top: -20px;
-border: solid 1px red;
 height: 350px;
 }
 aside p {
@@ -132,5 +131,8 @@ font-size: 20px;
 font-family: sans-serif;
 }
 .body {
-line-height: 25px;
+line-height: 27px;
+}
+.video {
+  margin-top: 30px;
 }
